# src/routes/admin/adminRouter.ts
@@ -4,6 +4,8 @@ import { roleRouter } from "./roleRouter";
 import { subjectsRouter } from "./education/subjectRouter";
 import { archiveRouter } from "./archiveRouter";
 import { permissionRouter } from "./permissionRouter";
+import { notifyRouter } from "./notify/notifyRouter";
+import { notifyTypeRouter } from "./notify/notifyTypeRouter";
 
 export const adminRouter = Router();
 
@@ -14,3 +16,7 @@ adminRouter.use('/permission', permissionRouter);
 adminRouter.use('/subject', subjectsRouter);
 
 adminRouter.use('/archive', archiveRouter);
+
+adminRouter.use('/notify', notifyRouter);
+
+adminRouter.use('/notify-type', notifyTypeRouter);
