# src/routes/router.ts
@@ -7,6 +7,7 @@ import { sessionRouter } from "./sessionRouter";
 import { collectionRouter } from "./collectionRouter";
 import { adminRouter } from "./admin/adminRouter";
 import { messengerRouter } from "./messenger/mesengerRouter";
+import { notifyRouter } from "./notifyRouter";
 
 export const router = Router();
 
@@ -17,6 +18,8 @@ router.use('/auth', authRouter);
 router.use('/user', userRouter);
 
 router.use('/session', sessionRouter);
+
+router.use('/notify', notifyRouter);
 
 router.use('/collection', collectionRouter);
 
